src/ui/snapshots/tuister__ui__tests__render_model_selection_snapshot.snap
---
source: src/ui/mod.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│Model Selection (1/3)                                                         │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Available Models (↑↓/PgUp/PgDn to navigate, Space/Enter to toggle)────────────┐"
"│[✓] Model 1                                                                   │"
"│[✓] Model 2                                                                   │"
"│[✓] Model 3                                                                   │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Help──────────────────────────────────────────────────────────────────────────┐"
"│Esc: Back to chat | Space/Enter: Toggle | ↑↓/PgUp/PgDn: Navigate | Ctrl+C: Qui│"
"└──────────────────────────────────────────────────────────────────────────────┘"
