src/ui/snapshots/tuister__ui__tests__render_with_input_snapshot.snap
---
source: src/ui/mod.rs
expression: terminal.backend()
---
"┌Active Models─────────────────────────────────────────────────────────────────┐"
"│[Model 1] [Model 2] [Model 3] (←→: focus panel | ↑↓: scroll | Tab: cycle | Esc│"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌► Model 1───────────────┐┌Model 2──────────────────┐┌Model 3─────────────────┐ "
"│No messages yet         ││No messages yet          ││No messages yet         │ "
"│                        ││                         ││                        │ "
"│                        ││                         ││                        │ "
"│                        ││                         ││                        │ "
"│                        ││                         ││                        │ "
"│                        ││                         ││                        │ "
"│                        ││                         ││                        │ "
"│                        ││                         ││                        │ "
"│                        ││                         ││                        │ "
"│                        ││                         ││                        │ "
"│                        ││                         ││                        │ "
"│                        ││                         ││                        │ "
"│                        ││                         ││                        │ "
"│                        ││                         ││                        │ "
"│                        ││                         ││                        │ "
"│                        ││                         ││                        │ "
"└────────────────────────┘└─────────────────────────┘└────────────────────────┘ "
"┌Input─────────────────────────────────────────────────────────────────────────┐"
"│Hello, world!                                                                 │"
"└──────────────────────────────────────────────────────────────────────────────┘"
